# vicres-ingest

./: .gitignore  README.md  params.template.yaml  pyproject.toml
envs/: environment.yml
src/vicres_tool/: __init__.py  dem_utils.py  precip_utils.py  preprocess.py  temperature_utils.py  wind_utils.py
